--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,3 +11,25 @@
 .error {
   color: red;
 }
+
+.gray-section{
+  background-color: #f2f5fa !important;
+}
+
+.slider-section{
+  color:#f5f5f5;
+  background-image: url("../images/slider.jpg")
+}
+
+.color-text{
+  color:yellow;
+}
+
+footer{
+  background-color: #0f141f !important;
+}
+
+.slider{
+  padding-top:150px;
+  padding-bottom:150px;
+}
