--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,39 +1,265 @@
-<div class="container">
-    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-        <h1 class="display-4">Build up, customize and style your Resume.</h1>
-        <p class="lead">Boost up your career by creating the ultimate Resume.<br><br>
-            With this web application you can build up all of your professional experience details, all the tasks,
-            challenges and achievements you have collected so far, as well as your skills and education details.<br><br>Then you can customize your info in order to build the perfect Resume targeted to that specific
-            position
-        </p>
-    </div>
-
-    <div class="container">
-        <div class="card-deck mb-3 text-center">
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Style 1</h4>
-                </div>
-                <div class="card-body">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBmq-LBerWGBxQGZYcsn8JM7llci1ezRMc7Dr3iAn_xows3Wwp3g" alt="">
-                </div>
-            </div>
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Style 2</h4>
-                </div>
-                <div class="card-body">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQn2-BD5Y8Fgro7rEyW0goDgv2MmQG2amUAOtSKYOBza33cL0jpXA" alt="">
-                </div>
-            </div>
-            <div class="card mb-4 shadow-sm">
-                <div class="card-header">
-                    <h4 class="my-0 font-weight-normal">Style 3</h4>
-                </div>
-                <div class="card-body">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQB17gp8LqJyIgFnjGlEcDuriYaxidYLWcwOeDPety4gPnjdVdv" alt="">
-                </div>
-            </div>
+<div class="slider-section">
+    <div class="container slider">
+        <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+            <h1 class="display-4">Only <strong class="color-text">2%</strong> of CVs make it past the first round. Be in
+                the top <strong class="color-text">2%</strong></h1>
+            <p class="lead">Use professional field-tested resume templates that follow the exact ‘resume rules’
+                employers look for. Easy to use & done within minutes - try now for free!
+            </p>
+            <a role="button" href="/profile" class="btn btn-primary btn-lg my-4">Create Resume!</a>
         </div>
     </div>
 </div>
+
+<div class="container">
+    <!-- Section: Features v.2 -->
+    <section class="my-5">
+
+        <!-- Section heading -->
+        <h2 class="h1-responsive font-weight-bold text-center my-5">Effortlessly build a job-worthy resume <br /> that
+            gets you hired faster</h2>
+        <!-- Section description -->
+        <p class="lead grey-text text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam.</p>
+
+        <!-- Grid row -->
+        <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-4 mb-md-0 mb-5">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-lg-2 col-md-3 col-2">
+                        <i class="fas fa-bullhorn blue-text fa-2x"></i>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-10 col-md-9 col-10">
+                        <h4 class="font-weight-bold">Quick & easy</h4>
+                        <p class="grey-text">Save time with our easy 3-step resume builder. No more writer’s block or
+                            formatting difficulties in Word. Rapidly build a resume employers love.</p>
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-4 mb-md-0 mb-5">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-lg-2 col-md-3 col-2">
+                        <i class="fas fa-cogs pink-text fa-2x"></i>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-10 col-md-9 col-10">
+                        <h4 class="font-weight-bold">Demand attention</h4>
+                        <p class="grey-text">Keep job hunting simple with all your resumes managed in one place.</p>
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-4">
+
+                <!-- Grid row -->
+                <div class="row">
+
+                    <!-- Grid column -->
+                    <div class="col-lg-2 col-md-3 col-2">
+                        <i class="fas fa-tachometer-alt purple-text fa-2x"></i>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-lg-10 col-md-9 col-10">
+                        <h4 class="font-weight-bold">Job-winning content</h4>
+                        <p class="grey-text">We give you expert resume writing tips from start to finish. No more
+                            worrying about missing jobs or wasting time with the wrong resume content.</p>
+                    </div>
+                    <!-- Grid column -->
+
+                </div>
+                <!-- Grid row -->
+
+            </div>
+            <!-- Grid column -->
+
+        </div>
+        <!-- Grid row -->
+
+    </section>
+    <!-- Section: Features v.2 -->
+</div>
+
+<div class="gray-section">
+    <div class="container py-1">
+        <!-- Section: Features v.3 -->
+        <section class="my-5">
+
+            <!-- Section heading -->
+            <h2 class="h1-responsive font-weight-bold text-center my-5">Why is it so great?</h2>
+            <!-- Section description -->
+            <p class="lead grey-text text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam.</p>
+
+            <!-- Grid row -->
+            <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-lg-5 text-center text-lg-left">
+                    <img class="img-fluid" src="https://mdbootstrap.com/img/Photos/Others/screens-section.jpg"
+                        alt="Sample image">
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-lg-7">
+
+                    <!-- Grid row -->
+                    <div class="row mb-3">
+
+                        <!-- Grid column -->
+                        <div class="col-1">
+                            <i class="fas fa-share fa-lg indigo-text"></i>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-xl-10 col-md-11 col-10">
+                            <h5 class="font-weight-bold mb-3">Safety</h5>
+                            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad minima
+                                veniam,
+                                quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda deleniti hic.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                    </div>
+                    <!-- Grid row -->
+
+                    <!-- Grid row -->
+                    <div class="row mb-3">
+
+                        <!-- Grid column -->
+                        <div class="col-1">
+                            <i class="fas fa-share fa-lg indigo-text"></i>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-xl-10 col-md-11 col-10">
+                            <h5 class="font-weight-bold mb-3">Technology</h5>
+                            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad minima
+                                veniam,
+                                quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda deleniti hic.
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                    </div>
+                    <!-- Grid row -->
+
+                    <!--Grid row-->
+                    <div class="row">
+
+                        <!-- Grid column -->
+                        <div class="col-1">
+                            <i class="fas fa-share fa-lg indigo-text"></i>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-xl-10 col-md-11 col-10">
+                            <h5 class="font-weight-bold mb-3">Finance</h5>
+                            <p class="grey-text mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit enim ad
+                                minima
+                                veniam, quis nostrum exercitationem ullam. Reprehenderit maiores aperiam assumenda
+                                deleniti hic.</p>
+                        </div>
+                        <!-- Grid column -->
+
+                    </div>
+                    <!--Grid row-->
+
+                </div>
+                <!--Grid column-->
+
+            </div>
+            <!-- Grid row -->
+
+        </section>
+        <!-- Section: Features v.3 -->
+    </div>
+</div>
+
+<section class="py-5">
+    <div class="container">
+        <!-- Section heading -->
+        <h2 class="h1-responsive font-weight-bold text-center my-5">Contact Us</h2>
+        <!-- Section description -->
+        <p class="lead grey-text text-center w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam.</p>
+
+        <!--Card content-->
+        <div class="card-body px-lg-5 pt-0">
+
+            <!-- Form -->
+            <form class="text-center" style="color: #757575;">
+
+                <!-- Name -->
+                <div class="md-form mt-3">
+                    <input type="text" id="materialContactFormName" class="form-control">
+                    <label for="materialContactFormName">Name</label>
+                </div>
+
+                <!-- E-mail -->
+                <div class="md-form">
+                    <input type="email" id="materialContactFormEmail" class="form-control">
+                    <label for="materialContactFormEmail">E-mail</label>
+                </div>
+
+                <!--Message-->
+                <div class="md-form">
+                    <textarea id="materialContactFormMessage" class="form-control md-textarea" rows="3"></textarea>
+                    <label for="materialContactFormMessage">Message</label>
+                </div>
+
+                <!-- Copy -->
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="materialContactFormCopy">
+                    <label class="form-check-label" for="materialContactFormCopy">Send me a copy of this
+                        message</label>
+                </div>
+
+                <!-- Send button -->
+                <button class="btn btn-primary btn-lg btn-block my-4"
+                    type="submit">Send</button>
+
+            </form>
+            <!-- Form -->
+
+        </div>
+        <!-- Material form contact -->
+    </div>
+</section>
