--- a/views/print.handlebars
+++ b/views/print.handlebars
@@ -1,11 +1,12 @@
-<div class="container" id="printYa">
+<div class="container">
+
   {{#each data.GeneralInfos}}
   <div class="row text-center">
     <div class="col-xl-1"></div>
     <div class="col-xl-10">
       <p>{{name}} {{description}}</p>
     </div>
-  </div> 
+  </div>
 
   <div class="row text-center">
     <div class="col-xl-1"></div>
@@ -23,65 +24,68 @@
   <div class="row mb-4">
     <div class="col-xl-1"></div>
     <div class="col-xl-10">
-      <h2>Job Exprience</h2>
+      <h2 id="exp">Job Exprience</h2>
     </div>
     <div class="col-xl-1"></div>
   </div>
 
-  {{#each data.Experiences}}
+  <div id="printYa">
+    {{#each data.Experiences}}
+    <div class="row">
+      <div class="col-xl-1"></div>
+      <div class="col-xl-3 text-center">
+        <p id="dates">{{entryDate}}-{{leaveDate}}</p>
+      </div>
 
-  <div class="row">
-    <div class="col-xl-1"></div>
-    <div class="col-xl-3 text-center">
-      <p>{{entryDate}}-{{leaveDate}}</p>
+      <div class="col-xl-7">
+        <p><strong>{{company}}</strong></p>
+      </div>
+      <div class="col-xl-1"></div>
     </div>
 
-    <div class="col-xl-7">
-      <p><strong>{{company}}</strong></p>
-    </div>
-    <div class="col-xl-1"></div>
-  </div>
+    <div class="row">
+      <div class="col-xl-1"></div>
+      <div class="col-xl-3 text-center">
+        <p>{{city}}, {{state}}</p>
+      </div>
 
-  <div class="row">
-    <div class="col-xl-1"></div>
-    <div class="col-xl-3 text-center">
-      <p>{{city}}, {{state}}</p>
-    </div>
-
-    <div class="col-xl-7">
-      <p>{{jobTitle}}</p>
-    </div>
-    <div class="col-xl-1"></div>
-  </div>
-
-  <div class="row">
-    <div class="col-xl-1"></div>
-    <div class="col-xl-3">
+      <div class="col-xl-7">
+        <p>{{jobTitle}}</p>
+      </div>
+      <div class="col-xl-1"></div>
     </div>
 
-    <div class="col-xl-7">
-      <p>{{description}}</p>
-    </div>
-    <div class="col-xl-1"></div>
-  </div>
+    <div class="row">
+      <div class="col-xl-1"></div>
+      <div class="col-xl-3">
+      </div>
 
-  <div class="row">
-    <div class="col-xl-1"></div>
-    <div class="col-xl-3">
+      <div class="col-xl-7">
+        <p>{{description}}</p>
+      </div>
+      <div class="col-xl-1"></div>
     </div>
 
-    <div class="col-xl-7">
-      <ul>
-        <li>{{task1}}</li>
-      </ul>
-    </div>
-    <div class="col-xl-1"></div>
-  </div>
+    <div class="row">
+      <div class="col-xl-1"></div>
+      <div class="col-xl-3">
+      </div>
 
-  <!--<form action="/deleteexp/{{id}}" method="POST">
+      <div class="col-xl-7">
+        <ul>
+          <li>{{task1}}</li>
+        </ul>
+      </div>
+      <div class="col-xl-1"></div>
+    </div>
+
+    <!--<form action="/deleteexp/{{id}}" method="POST">
       <button type="submit" class="btn btn-danger">Delete</button>
     </form>-->
-  {{/each}}
+
+    {{/each}}
+  </div>
+
 
   <hr>
   <div class="row mb-4">
@@ -158,8 +162,8 @@
     <div class="col-xl-1"></div>
   </div>
 
-<a type="submit" id="printPDF" class="btn btn-primary">print</a>
-  
+  <a type="submit" id="printPDF" class="btn btn-primary">print</a>
+
+
 
 </div>
-
